[gd_scene load_steps=3 format=2]

[ext_resource path="res://Maps/RoomBase.gd" type="Script" id=1]
[ext_resource path="res://Hud/Hud.tscn" type="PackedScene" id=2]

[node name="RoomBase" type="Node2D" groups=[
"room",
]]

script = ExtResource( 1 )

[node name="Hud" parent="." index="0" instance=ExtResource( 2 )]

[node name="Floor" type="TileMap" parent="." index="1" groups=[
"floor",
]]

mode = 0
tile_set = null
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )

[node name="Wall" type="TileMap" parent="." index="2" groups=[
"wall",
]]

mode = 0
tile_set = null
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = true
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )

[node name="CameraLimits" type="Node" parent="." index="3"]

[node name="TopLeftCorner" type="Position2D" parent="CameraLimits" index="0"]

[node name="BottomRightCorner" type="Position2D" parent="CameraLimits" index="1"]

position = Vector2( 1024, 600 )
_sections_unfolded = [ "Transform" ]


